# aegis-os

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  README.md  ROADMAP.md  WHITEPAPER.txt  pyproject.toml
.aegis/: CONSTITUTION.md  LESSONS_LEARNED.md
.aegis/prompts/: sprint-001.md  sprint-003.md  sprint-004.md  sprint-005.md  sprint-006.md  sprint-007.md  sprint-008.md  sprint-009.md  sprint-010.md  sprint-011.md  sprint-011_5.md  sprint-012.md  sprint-013.md  sprint-014.md  sprint-015.md
aegis/: __main__.py  app.py  dashboard.py  inventory.py  journal.py  knowledge.py  monitor.py  operator.py  search.py  state.py
aegis/core/: __init__.py  application.py  events.py  router.py  screen.py  state.py
aegis/models/: __init__.py  document_viewer.py  knowledge_navigator.py
aegis/screens/: __init__.py  hardware.py  home.py  inventory.py  journal.py  knowledge.py  operator.py  placeholder.py  search.py  (+1 more)
docs/: ARCHITECTURE.md  DECISIONS.md  FOUNDRY_SPEC.md  MANIFESTO.md  PACK_SPEC.md  PROJECT_BRIEF.md  PROJECT_INDEX.md  REPOSITORY_LAYOUT.md  ROADMAP_1_0.md  RUNTIME_SPEC.md  SPRINT_001.md  SPRINT_003.md  SPRINT_004.md  SPRINT_005.md  SPRINT_006.md  SPRINT_007.md  SPRINT_008.md  SPRINT_009.md  SPRINT_010.md  SPRINT_011.md  SPRINT_011_5.md  SPRINT_012.md  SPRINT_013.md  SPRINT_014.md  SPRINT_015.md  STATE_OF_PROJECT.md
scripts/: aegis-console.sh  clear_fb.py  make_boot_splash.py  show_splash_fb.py
specs/: AKP.md  ARCHITECTURE.md  FIELD_TERMINAL.md  MODULES.md  SCREEN_MANAGER.md  STYLE.md
state/: operator.json
systemd/: aegis-console.service
(+46 files in other folders)
